# aa-fortunaisk

./: .coveragerc  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .stylelintrc.json  CHANGELOG.md  Makefile  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  runtests.py  setup.py  tox.ini
fortunaisk/: CeleryConfig.README.md  __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  decorators.py  forms.py  models.py  notifications.py  signals.py  tasks.py  urls.py  utils.py  views.py  webhooks.py
fortunaisk/forms/: __init__.py  autolottery_forms.py  lottery_forms.py  settings_forms.py
fortunaisk/migrations/: 0001_initial.py  0002_general_alter_auditlog_options_and_more.py  0002_setup_periodic_tasks.py  0003_auditlog.py  0003_ticketpurchase_quantity_alter_ticketpurchase_amount_and_more.py  0004_consolidate_ticketpurchases.py  0007_add_new_schema_squashed_0020_alter_ticketanomaly_detail.py
fortunaisk/models/: __init__.py  auditlog.py  autolottery.py  base_settings.py  general.py  lottery.py  payment.py  reward.py  ticket.py  user_profile.py  webhook.py  winner_distribution.py
fortunaisk/signals/: __init__.py  auditlog_signals.py  autolottery_signals.py  lottery_signals.py  notifications_signals.py  setup_tasks_signal.py  signals.py  ticket_signals.py  user_signals.py  webhook_signals.py
fortunaisk/templates/: ticket_purchases.html
fortunaisk/templatetags/: fortunaisk_filters.py  fortunaisk_tags.py  my_filters.py
fortunaisk/tests/: __init__.py  test.py  test_example.py  test_forms.py  (+3 more)
(+45 files in other folders)
